# xtract

./: CMakeLists.txt  README.md
data/: english.txt
lib/demonic/: CMakeLists.txt  demonic.h
lib/demonic/containers/: CMakeLists.txt  vectors.cpp  vectors.h
lib/demonic/helpmaker/: CMakeLists.txt  help.cpp  help.h
lib/demonic/math/: CMakeLists.txt  math.cpp  math.h
lib/demonic/strings/: CMakeLists.txt  strings.cpp  strings.h
src/: main.cpp
